--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -29,6 +29,7 @@
       type="text"
       class="text-base"
       nz-input
+      [formControl]="searchValue"
       placeholder="{{'HEADER.SEARCH' | translate}}"
       [nzAutocomplete]="auto"
     />
@@ -143,12 +144,12 @@
 </ng-template>
 
 <nz-autocomplete #auto>
-  <nz-auto-option *ngFor="let group of autoCompleteData" nzLabel="iPhone 11 I Chính hãng VN/A" nzValue="iPhone 11 I Chính hãng VN/A">
+  <nz-auto-option *ngFor="let item of autoCompleteData" (click)="goToDetail(item.slug!)">
     <div class="flex">
-      <img src="assets/logo/small-logo.png" class="w-10 h-11 object-contain mr-1">
+      <img [src]="item.image" class="w-10 h-11 object-contain mr-1">
       <div class="flex-1 font-semibold">
-        <h4 class="text-sm">iPhone 11 I Chính hãng VN/A</h4>
-        <p class="text-red-600 text-xs">16.000.000 ₫</p>
+        <h4 class="text-sm">{{item.name}}</h4>
+        <p class="text-red-600 text-xs">{{item.originalPrice | number: '1.0-2'}} ₫</p>
       </div>
     </div>
   </nz-auto-option>
